--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,8 @@ dependencies {
     //circle imageview
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    //picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
